[package]
name = "provcfg-clap-macros"
description = "Derive macros for the provcfg-clap integration crate."
documentation = "https://docs.rs/provcfg-clap-macros"
keywords = ["config", "provenance", "clap", "derive"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
